# progminer

./: README.md
cmake/Hunter/: config.cmake
libethash/: progpow.cpp
libethash-cpu/: CPUMiner.cpp
libethash-cuda/: CMakeLists.txt
libpoolprotocols/: PoolManager.cpp  PoolManager.h  PoolURI.cpp  PoolURI.h
libpoolprotocols/stratum/: EthStratumClient.cpp
libprogpow/: ProgPow.cpp
progminer/: CMakeLists.txt  main.cpp  progminer.rc
